Support undoing array/set properties

--- a/languages/dnd5e/en.json
+++ b/languages/dnd5e/en.json
@@ -123,6 +123,8 @@
             "actor.system.attributes.spellmod": "Spellcasting Modifier",
             "actor.system.attunement.max": "Max Attunement",
             "actor.system.attunement.value": "Current Attunement",
+            "actor.system.bastion.description": "Bastion Description",
+            "actor.system.bastion.name": "Bastion Name",
             "actor.system.bonuses.abilities.check": "Global Ability Check Bonus",
             "actor.system.bonuses.abilities.save": "Global Saving Throw Bonus",
             "actor.system.bonuses.abilities.skill": "Global Skill Bonus",
@@ -356,29 +358,35 @@
             "item.system.price.denomination": "Item Denomination",
             "item.system.price.value" : "Item Price",
             "item.system.proficient": "Item Proficiency Level",
-            "item.system.properties.ada": "Item Property Adamantine",
-            "item.system.properties.amm": "Item Property Ammunition",
-            "item.system.properties.fin": "Item Property Finesse",
-            "item.system.properties.fir": "Item Property Firearm",
-            "item.system.properties.foc": "Item Property Focus",
-            "item.system.properties.hvy": "Item Property Heavy",
-            "item.system.properties.lgt": "Item Property Light",
-            "item.system.properties.lod": "Item Property Loading",
-            "item.system.properties.mgc": "Item Property Magical",
-            "item.system.properties.rch": "Item Property Reach",
-            "item.system.properties.rel": "Item Property Reload",
-            "item.system.properties.ret": "Item Property Returning",
-            "item.system.properties.sil": "Item Property Silvered",
-            "item.system.properties.spc": "Item Property Special",
-            "item.system.properties.thr": "Item Property Thrown",
-            "item.system.properties.two": "Item Property Two-Handed",
-            "item.system.properties.ver": "Item Property Versatile",
+            "item.system.properties.ada": "Item Adamantine",
+            "item.system.properties.amm": "Item Ammunition",
+            "item.system.properties.concentration": "Item Concentration",
+            "item.system.properties.fin": "Item Finesse",
+            "item.system.properties.fir": "Item Firearm",
+            "item.system.properties.foc": "Item Focus",
+            "item.system.properties.hvy": "Item Heavy",
+            "item.system.properties.lgt": "Item Light",
+            "item.system.properties.lod": "Item Loading",
+            "item.system.properties.material": "Item Material",
+            "item.system.properties.mgc": "Item Magical",
+            "item.system.properties.rch": "Item Reach",
+            "item.system.properties.rel": "Item Reload",
+            "item.system.properties.ret": "Item Returning",
+            "item.system.properties.ritual": "Item Ritual",
+            "item.system.properties.sil": "Item Silvered",
+            "item.system.properties.somatic": "Item Somatic",
+            "item.system.properties.spc": "Item Special",
+            "item.system.properties.thr": "Item Thrown",
+            "item.system.properties.two": "Item Two-Handed",
+            "item.system.properties.ver": "Item Versatile",
+            "item.system.properties.vocal": "Item Vocal",
             "item.system.quantity": "Item Quantity",
             "item.system.range.long": "Item Long Range",
             "item.system.range.reach": "Item Reach Range",
             "item.system.range.units": "Item Range Units",
             "item.system.range.value": "Item Normal Range",
             "item.system.rarity": "Item Rarity",
+            "item.system.school": "Item Spell School",
             "item.system.type.value": "Item Type",
             "item.system.uses.max": "Item Max Uses",
             "item.system.uses.spent": "Item Spent Uses",
