Add description to tagify app, minor fixes

--- a/languages/en.json
+++ b/languages/en.json
@@ -26,25 +26,22 @@
     "changeLog.settings.showSender.hint": "Choose whether to show sender on the chat card",
     "changeLog.tagifyApp.accept": "Accept",
     "changeLog.tagifyApp.cancel": "Cancel",
+    "changeLog.tagifyApp.properties.description": "Click available properties to select them, click and drag selected properties to change their order and click the <strong>X</strong> on selected properties to unselect them. Click an empty area of the <strong>Selected Properties</strong> box and start typing to filter the available properties.",
+    "changeLog.tagifyApp.types.description": "Click available types to select them, click and drag selected types to change their order and click the <strong>X</strong> on selected types to unselect them. Click an empty area of the <strong>Selected Types</strong> box and start typing to filter the available types.",
     "changeLog.tagifyApp.unselectAll": "Unselect All",
     "changeLog.tagifyApp.selectAll": "Select All",
-    "changeLog.tagifyApp.everyoneActorTypes.description": "Click items in the Available Types box to select them or type into the Selected Types.",
     "changeLog.tagifyApp.everyoneActorTypes.title": "Actor Types for Everyone",
     "changeLog.tagifyApp.everyoneActorTypes.label.available": "Available Types",
     "changeLog.tagifyApp.everyoneActorTypes.label.selected": "Selected Types",
-    "changeLog.tagifyApp.everyoneProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
     "changeLog.tagifyApp.everyoneProperties.title": "Changes for Everyone",
     "changeLog.tagifyApp.everyoneProperties.label.available": "Available Properties",
     "changeLog.tagifyApp.everyoneProperties.label.selected": "Selected Properties",
-    "changeLog.tagifyApp.gmActorTypes.description": "Click items in the Available Types box to select them or type into the Selected Types.",
     "changeLog.tagifyApp.gmActorTypes.title": "Actor Types for GM",
     "changeLog.tagifyApp.gmActorTypes.label.available": "Available Types",
     "changeLog.tagifyApp.gmActorTypes.label.selected": "Selected Types",
-    "changeLog.tagifyApp.gmProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
     "changeLog.tagifyApp.gmProperties.title": "Changes for GM",
     "changeLog.tagifyApp.gmProperties.label.available": "Available Properties",
     "changeLog.tagifyApp.gmProperties.label.selected": "Selected Properties",
-    "changeLog.tagifyApp.playerProperties.description": "Click items in the Available Properties box to select them or type into the Selected Properties.",
     "changeLog.tagifyApp.playerProperties.title": "Changes for Player",
     "changeLog.tagifyApp.playerProperties.label.available": "Available Properties",
     "changeLog.tagifyApp.playerProperties.label.selected": "Selected Properties",
